--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "format": "prettier --write \"src/**/*.js\""
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.38.4",
     "bootstrap": "^5.3.2",
+    "dotenv": "^16.3.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
