--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "format": "prettier --write \"src/**/*.js\""
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@supabase/supabase-js": "^2.38.4",
     "bootstrap": "^5.3.2",
     "dotenv": "^16.3.1",
