--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
+    "react-quilljs": "^1.3.3",
     "react-router-dom": "^6.17.0"
   },
   "devDependencies": {
